# LogSystem

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  log.2022-11-18  log.txt  log_xx.txt  root.txt
chx/: config.cc  config.h  lock.cc  lock.h  log.cc  log.h  singleton.h  util.cc  util.h
tests/: test.cc  test_config.cc
